@@ -213,6 +213,10 @@ function hideClassicSkinElems(page, textCol) {
     if (iframe) {
         var content = iframe.contentDocument;
         if (undefined==content) {
+            if ('other'==page && iframe.contentWindow) {
+                // Text files?
+                iframe.className="iframe-plain-text";
+            }
             return;
         }
         fixClassicSkinRefs(content);
@@ -240,9 +244,6 @@ function hideClassicSkinElems(page, textCol) {
                 } else if (content.attachEvent) {
                     content.attachEvent('onclick', otherClickHandler);
                 }
-            } else if (iframe.contentWindow) {
-                // Text files?
-                iframe.className="iframe-plain-text";
             }
         }
         if (undefined!=toHide) {
